H264Sharp/H264NativeApiy.Legacy.cs


        [DllImport(Defines.WrapperDllWin32, EntryPoint = "SetParallelConverterEnc", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SetParallelConverterEnc(IntPtr encoder, int isParallel);

        [DllImport(Defines.WrapperDllWin32, EntryPoint = "GetOptionEncoder", CallingConvention = CallingConvention.Cdecl)]
        public static extern int GetOptionEncoder(IntPtr encoder, ENCODER_OPTION option, IntPtr value);

        [DllImport(Defines.WrapperDllWin32, EntryPoint = "SetOptionEncoder", CallingConvention = CallingConvention.Cdecl)]
        public static extern int SetOptionEncoder(IntPtr encoder, ENCODER_OPTION option, IntPtr value);

        #endregion

        #region Decoder

        [DllImport(Defines.WrapperDllWin32, EntryPoint = "GetDecoder", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        public static extern IntPtr GetDecoder(string s);

        [DllImport(Defines.WrapperDllWin32, EntryPoint = "InitializeDecoderDefault", CallingConvention = CallingConvention.Cdecl)]
        public static extern int InitializeDecoderDefault(IntPtr dec);

        [DllImport(Defines.WrapperDllWin32, EntryPoint = "InitializeDecoder", CallingConvention = CallingConvention.Cdecl)]
        public static extern int InitializeDecoder(IntPtr dec, TagSVCDecodingParam param);

        [DllImport(Defines.WrapperDllWin32, EntryPoint = "DecodeAsRGB", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool DecodeAsRGB(IntPtr decoder, ref byte frame, int lenght, bool noDelay, ref int state, ref RGBImagePointer decoded);

        [DllImport(Defines.WrapperDllWin32, EntryPoint = "DecodeAsYUV", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool DecodeAsYUV(IntPtr decoder, ref byte frame, int lenght, bool noDelay, ref int state, ref YUVImagePointer decoded);

        [DllImport(Defines.WrapperDllWin32, EntryPoint = "DecodeAsRGBInto", CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe bool DecodeRgbInto(IntPtr decoder, ref byte frame, int lenght, bool noDelay, ref int state, IntPtr buffer);

        [DllImport(Defines.WrapperDllWin32, EntryPoint = "FreeDecoder", CallingConvention = CallingConvention.Cdecl)]
        public static extern void FreeDecoder(IntPtr decoder);

        [DllImport(Defines.WrapperDllWin32, EntryPoint = "SetParallelConverterDec", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SetParallelConverterDec(IntPtr decoder, int isParallel);

        [DllImport(Defines.WrapperDllWin32, EntryPoint = "UseSSEYUVConverter", CallingConvention = CallingConvention.Cdecl)]
        public static extern void UseSSEConverterDec(IntPtr decoder, bool isSSE);

        [DllImport(Defines.WrapperDllWin32, EntryPoint = "GetOptionDecoder", CallingConvention = CallingConvention.Cdecl)]
        public static extern int GetOptionDecoder(IntPtr decoder, DECODER_OPTION option, IntPtr value);

        [DllImport(Defines.WrapperDllWin32, EntryPoint = "SetOptionDecoder", CallingConvention = CallingConvention.Cdecl)]
        public static extern int SetOptionDecoder(IntPtr decoder, DECODER_OPTION option, IntPtr value);

        #endregion

        #region Converter

        //todo
        [DllImport(Defines.WrapperDllWin32, EntryPoint = "GetDecoder", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Unicode)]
        public static extern void RGBtoYUV(ref RGBImagePointer rgb, ref YUVImagePointer yuv, int numThreads);

        [DllImport(Defines.WrapperDllWin32, EntryPoint = "GetDecoder", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Unicode)]
        public static extern void YUV2RGB(ref YUVImagePointer rgb, ref RGBImagePointer yuv, int numThreads);

        [DllImport(Defines.WrapperDllWin32, EntryPoint = "DownscaleImg", CallingConvention = CallingConvention.Cdecl)]
        public static extern void DownscaleImg(ref UnsafeGenericImage from, ref UnsafeGenericImage to, int mul);

        #endregion
    }

    internal static class H264NativeApiWin64
    {
        #region Encoder

        [DllImport(Defines.WrapperDllWin64, EntryPoint = "GetEncoder", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        public static extern IntPtr GetEncoder(string dllName);

        [DllImport(Defines.WrapperDllWin64, EntryPoint = "InitializeEncoderBase", CallingConvention = CallingConvention.Cdecl)]
        public static extern int InitializeEncoderBase(IntPtr encoder, TagEncParamBase param);

        [DllImport(Defines.WrapperDllWin64, EntryPoint = "InitializeEncoder", CallingConvention = CallingConvention.Cdecl)]
        public static extern int InitializeEncoder(IntPtr encoder, int width, int height, int bps, int fps, int configType);

        [DllImport(Defines.WrapperDllWin64, EntryPoint = "GetDefaultParams", CallingConvention = CallingConvention.Cdecl)]
        public static extern int GetDefaultParams(IntPtr encoder, ref TagEncParamExt param);

        [DllImport(Defines.WrapperDllWin64, EntryPoint = "InitializeEncoder2", CallingConvention = CallingConvention.Cdecl)]
        public static extern int InitializeEncoder2(IntPtr encoder, TagEncParamExt param);

        [DllImport(Defines.WrapperDllWin64, EntryPoint = "Encode", CallingConvention = CallingConvention.Cdecl)]
        public static extern int Encode(IntPtr encoder, ref UnsafeGenericImage s, ref FrameContainer fc);

        [DllImport(Defines.WrapperDllWin64, EntryPoint = "Encode1", CallingConvention = CallingConvention.Cdecl)]
        public static extern int Encode1(IntPtr encoder, ref byte yuv, ref FrameContainer fc);

        [DllImport(Defines.WrapperDllWin64, EntryPoint = "ForceIntraFrame", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ForceIntraFrame(IntPtr encoder);

        [DllImport(Defines.WrapperDllWin64, EntryPoint = "SetMaxBitrate", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SetMaxBitrate(IntPtr encoder, int target);

        [DllImport(Defines.WrapperDllWin64, EntryPoint = "SetTargetFps", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SetTargetFps(IntPtr encoder, float target);

        [DllImport(Defines.WrapperDllWin64, EntryPoint = "FreeEncoder", CallingConvention = CallingConvention.Cdecl)]
        public static extern void FreeEncoder(IntPtr encoder);

        [DllImport(Defines.WrapperDllWin64, EntryPoint = "SetParallelConverterEnc", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SetParallelConverterEnc(IntPtr encoder, int isParallel);

        [DllImport(Defines.WrapperDllWin64, EntryPoint = "GetOptionEncoder", CallingConvention = CallingConvention.Cdecl)]
        public static extern int GetOptionEncoder(IntPtr encoder, ENCODER_OPTION option, IntPtr value);

        [DllImport(Defines.WrapperDllWin64, EntryPoint = "SetOptionEncoder", CallingConvention = CallingConvention.Cdecl)]
        public static extern int SetOptionEncoder(IntPtr encoder, ENCODER_OPTION option, IntPtr value);

        #endregion

        #region Decoder

        [DllImport(Defines.WrapperDllWin64, EntryPoint = "GetDecoder", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        public static extern IntPtr GetDecoder(string s);

        [DllImport(Defines.WrapperDllWin64, EntryPoint = "InitializeDecoderDefault", CallingConvention = CallingConvention.Cdecl)]
        public static extern int InitializeDecoderDefault(IntPtr dec);

        [DllImport(Defines.WrapperDllWin64, EntryPoint = "InitializeDecoder", CallingConvention = CallingConvention.Cdecl)]
        public static extern int InitializeDecoder(IntPtr dec, TagSVCDecodingParam param);

        [DllImport(Defines.WrapperDllWin64, EntryPoint = "DecodeAsRGB", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool DecodeAsRGB(IntPtr decoder, ref byte frame, int lenght, bool noDelay, ref int state, ref RGBImagePointer decoded);

        [DllImport(Defines.WrapperDllWin64, EntryPoint = "DecodeAsYUV", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool DecodeAsYUV(IntPtr decoder, ref byte frame, int lenght, bool noDelay, ref int state, ref YUVImagePointer decoded);

        [DllImport(Defines.WrapperDllWin64, EntryPoint = "DecodeAsRGBInto", CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe bool DecodeRgbInto(IntPtr decoder, ref byte frame, int lenght, bool noDelay, ref int state, IntPtr buffer);

        [DllImport(Defines.WrapperDllWin64, EntryPoint = "FreeDecoder", CallingConvention = CallingConvention.Cdecl)]
        public static extern void FreeDecoder(IntPtr decoder);

        [DllImport(Defines.WrapperDllWin64, EntryPoint = "SetParallelConverterDec", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SetParallelConverterDec(IntPtr decoder, int isParallel);

        [DllImport(Defines.WrapperDllWin64, EntryPoint = "UseSSEYUVConverter", CallingConvention = CallingConvention.Cdecl)]
        public static extern void UseSSEConverterDec(IntPtr decoder, bool isSSE);

        [DllImport(Defines.WrapperDllWin64, EntryPoint = "GetOptionDecoder", CallingConvention = CallingConvention.Cdecl)]
        public static extern int GetOptionDecoder(IntPtr decoder, DECODER_OPTION option, IntPtr value);

        [DllImport(Defines.WrapperDllWin64, EntryPoint = "SetOptionDecoder", CallingConvention = CallingConvention.Cdecl)]
        public static extern int SetOptionDecoder(IntPtr decoder, DECODER_OPTION option, IntPtr value);

        #endregion

        #region Converter

        //todo
        [DllImport(Defines.WrapperDllWin64, EntryPoint = "GetDecoder", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Unicode)]
        public static extern void RGBtoYUV(ref RGBImagePointer rgb, ref YUVImagePointer yuv, int numThreads);

        [DllImport(Defines.WrapperDllWin64, EntryPoint = "GetDecoder", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Unicode)]
        public static extern void YUV2RGB(ref YUVImagePointer rgb, ref RGBImagePointer yuv, int numThreads);

        [DllImport(Defines.WrapperDllWin64, EntryPoint = "DownscaleImg", CallingConvention = CallingConvention.Cdecl)]
        public static extern void DownscaleImg(ref UnsafeGenericImage from, ref UnsafeGenericImage to, int mul);

        #endregion
    }
}
#endif